# tm_basic

./: README.md  meson.build
TMBasicDotNet/: CborHelper.cs  Clock.cs  CommonFlowUtils.cs  DataTypes.cs  FileUtils.cs  TMBasicDotNet.csproj  TransactionDataTypes.cs
node_lib/: TMBasic.ts  TMBasic.ts.bak  package-lock.json  package.json
node_lib/src/: index.ts  types.ts
src/: ChronoUtils_AddOn.cpp  DateHolder.cpp  MetaInformationTools.cpp  PidUtil.cpp  meson.build
src/real_time_clock/: Clock.cpp  ClockComponent.cpp
src/single_pass_iteration_clock/: Clock.cpp  ClockComponent.cpp
tm_kit/basic/: AppClockHelper.hpp  AppRunnerUtils.hpp  ByteData.hpp  ByteDataWithTopicRecordFile.hpp  ByteDataWithTopicRecordFileImporterExporter.hpp  ByteData_Tuple_Piece.hpp  ByteData_Tuple_Variant_Piece.hpp  ByteData_Variant_Piece.hpp  CalculationsOnInit.hpp  ChronoUtils_AddOn.hpp  CollectionAsJoinedString.hpp  CommonFlowUtils.hpp  ConcatStructFieldInfo.hpp  ConfigurationMapComponent.hpp  ConstGenerator.hpp  ConstStringType.hpp  ConstType.hpp  ConstValueType.hpp  ConvertibleWithString.hpp  CounterComponent.hpp  DateHolder.hpp  EncodableThroughProxy.hpp  EncodeKeyThroughProxy.hpp  EqualityCheckHelper.hpp  FixedPrecisionShortDecimal.hpp  FmtPrintable.hpp  ForceDifferentType.hpp  GenericIOStreamImporterExporter.hpp  GraphControlFacility.hpp  IStreamPollingLinesImporter.hpp  IntIDComponent.hpp  LoggingComponentBase.hpp  MetaInformation.hpp  MetaInformationTools.hpp  MonadRunnerUtils.hpp  MultiAppRunnerUtils.hpp  NlohmannJsonInterop.hpp  NotConstructibleStruct.hpp  PidUtil.hpp  PrintHelper.hpp  (+25 more)
tm_kit/basic/empty_clock/: Clock.hpp  ClockComponent.hpp  ClockImporter.hpp  ClockOnOrderFacility.hpp  meson.build
tm_kit/basic/real_time_clock/: Clock.hpp  ClockComponent.hpp  ClockImporter.hpp  ClockOnOrderFacility.hpp  meson.build
tm_kit/basic/simple_shared_chain/: BasicWithTimeAppChainFactories.hpp  ChainBackedFacility.hpp  ChainDataImporterExporter.hpp  ChainMachine.hpp  ChainPollingPolicy.hpp  ChainReader.hpp  ChainWriter.hpp  EmptyChain.hpp  FolderUsingPartialHistoryInformation.hpp  InMemoryLockFreeChain.hpp  InMemorySharedChainCreator.hpp  InMemoryWithLockChain.hpp  OneShotChainWriter.hpp  SelfContainedChainModifier.hpp  meson.build
tm_kit/basic/single_pass_iteration_clock/: Clock.hpp  ClockComponent.hpp  ClockImporter.hpp  ClockOnOrderFacility.hpp  meson.build
tm_kit/basic/top_down_single_pass_iteration_clock/: Clock.hpp  ClockComponent.hpp  ClockImporter.hpp  ClockOnOrderFacility.hpp  meson.build
tm_kit/basic/transaction/: ExclusiveSingleKeyAsyncWatchableStorageTransactionBroker.hpp  ExclusiveSingleKeyAsyncWatchableTransactionHandlerComponent.hpp  FileBackedSingleVersionProviderComponent.hpp  InMemoryVersionProviderComponent.hpp  SingleKeyAsyncWatchableStorageTransactionBroker.hpp  SingleKeyAsyncWatchableTransactionHandlerComponent.hpp  SingleKeyLocalStorageTransactionBroker.hpp  SingleKeyLocalTransactionHandlerComponent.hpp  SingleKeyTransactionInterface.hpp  TITransactionFacilityOutputToData.hpp  TransactionClient.hpp  TransactionInterface.hpp  TransactionServer.hpp  VersionProviderComponent.hpp  meson.build
tm_kit/basic/transaction/complex_key_value_store/: VersionlessDataModel.hpp  meson.build
tm_kit/basic/transaction/named_value_store/: DataModel.hpp  meson.build
tm_kit/basic/transaction/v2/: DataStreamClientCombination.hpp  DataStreamEnvComponent.hpp  DataStreamInterface.hpp  DefaultUtilities.hpp  GeneralSubscriber.hpp  RealTimeDataStreamImporter.hpp  SinglePassIterationDataStreamImporter.hpp  TransactionDataStore.hpp  TransactionDeltaMerger.hpp  TransactionEnvComponent.hpp  TransactionFacility.hpp  TransactionInterface.hpp  TransactionLogicCombination.hpp  meson.build
