tm_basic_headers = [
      'ByteData.hpp'
    , 'ByteData_Tuple_Variant_Piece.hpp'
    , 'ByteDataWithTopicRecordFile.hpp'
    , 'ByteDataWithTopicRecordFileImporterExporter.hpp'
    , 'CommonFlowUtils.hpp'
    , 'ConstGenerator.hpp'
    , 'TrivialBoostLoggingComponent.hpp'
    , 'VoidStruct.hpp'
    ]
  
install_headers(tm_basic_headers, subdir : 'tm_kit/basic')
subdir('real_time_clock')
subdir('single_pass_iteration_clock')
