tm_basic_headers = [
      'ByteData.hpp'
    , 'ByteData_Tuple_Variant_Piece.hpp'
    , 'ByteData_Tuple_Piece.hpp'
    , 'ByteData_Variant_Piece.hpp'
    , 'ByteDataWithTopicRecordFile.hpp'
    , 'ByteDataWithTopicRecordFileImporterExporter.hpp'
    , 'CommonFlowUtils.hpp'
    , 'ConstGenerator.hpp'
    , 'TrivialBoostLoggingComponent.hpp'
    , 'VoidStruct.hpp'
    , 'SingleLayerWrapper.hpp'
    , 'ConstType.hpp'
    , 'SerializationHelperMacros.hpp'
    , 'AppRunnerUtils.hpp'
    , 'ForceDifferentType.hpp'
    , 'SpdLoggingComponent.hpp'
    , 'PrintHelper.hpp'
    , 'CalculationsOnInit.hpp'
    , 'IntIDComponent.hpp'
    , 'WrapFacilitioidConnectorForSerialization.hpp'
    , 'AppClockHelper.hpp'
    , 'TriviallySerializable.hpp'
    , 'GenericIOStreamImporterExporter.hpp'
    , 'NotConstructibleStruct.hpp'
    , 'StructFieldInfoHelper.hpp'
    , 'StructFieldInfoHelper_Tuple.hpp'
    , 'StructFieldInfoHelper_NamedField.hpp'
    , 'StructFieldInfoUtils.hpp'
    , 'GraphControlFacility.hpp'
    , 'CounterComponent.hpp'
    , 'MultiAppRunnerUtils.hpp'
    , 'EqualityCheckHelper.hpp'
    , 'StructFieldInfoBasedCsvUtils.hpp'
    , 'StructFieldInfoBasedFlatPackUtils.hpp'
    , 'StructFieldFlattenedInfo.hpp'
    , 'StructFieldInfoBasedCopy.hpp'
    , 'ProtoInterop.hpp'
    , 'NlohmannJsonInterop.hpp'
    , 'DateHolder.hpp'
    , 'ConfigurationMapComponent.hpp'
    , 'LoggingComponentBase.hpp'
    , 'ConvertibleWithString.hpp'
    , 'IStreamPollingLinesImporter.hpp'
    , 'StructFieldInfoWithMaskingFilter.hpp'
    , 'StructFieldInfoBasedTuplefy.hpp'
    , 'ConcatStructFieldInfo.hpp'
    , 'StructFieldInfoBasedDynamicView.hpp'
    , 'EncodableThroughProxy.hpp'
    , 'EncodeKeyThroughProxy.hpp'
    , 'SerializationHelperMacros_Proxy.hpp'
    , 'FixedPrecisionShortDecimal.hpp'
    , 'TimePointAsString.hpp'
    , 'CollectionAsJoinedString.hpp'
    , 'StructFieldInfoBasedHdf5Utils.hpp'
    , 'TimestampedCollectionImporter.hpp'
    , 'ChronoUtils_AddOn.hpp'
    , 'StructFieldInfoBasedTraverse.hpp'
    , 'ConstValueType.hpp'
    ]
  
install_headers(tm_basic_headers, subdir : 'tm_kit/basic')
subdir('real_time_clock')
subdir('single_pass_iteration_clock')
subdir('top_down_single_pass_iteration_clock')
subdir('empty_clock')
subdir('transaction')
subdir('simple_shared_chain')
