tm_basic_simple_shared_chain_headers = [
      'ChainReader.hpp'
      , 'ChainWriter.hpp'
      , 'FolderUsingPartialHistoryInformation.hpp'
      , 'ChainPollingPolicy.hpp'
      , 'OneShotChainWriter.hpp'
      , 'ChainDataImporterExporter.hpp'
      , 'ChainBackedFacility.hpp'
      , 'BasicWithTimeAppChainFactories.hpp'
      , 'InMemoryLockFreeChain.hpp'
      , 'InMemoryWithLockChain.hpp'
      , 'InMemorySharedChainCreator.hpp'
      , 'SelfContainedChainModifier.hpp'
      , 'EmptyChain.hpp'
  ]
  
install_headers(tm_basic_simple_shared_chain_headers, subdir : 'tm_kit/basic/simple_shared_chain')