tm_basic_top_down_single_pass_iteration_clock_headers = [
      'Clock.hpp'
    , 'ClockComponent.hpp'
    , 'ClockImporter.hpp'
    , 'ClockOnOrderFacility.hpp'
  ]
  
install_headers(tm_basic_top_down_single_pass_iteration_clock_headers, subdir : 'tm_kit/basic/top_down_single_pass_iteration_clock')