tm_basic_transaction_headers = [
      'SingleKeyTransactionInterface.hpp'
      , 'VersionProviderComponent.hpp'
      , 'InMemoryVersionProviderComponent.hpp'
      , 'FileBackedSingleVersionProviderComponent.hpp'
      , 'SingleKeyLocalTransactionHandlerComponent.hpp'
      , 'SingleKeyLocalStorageTransactionBroker.hpp'
  ]
  
install_headers(tm_basic_transaction_headers, subdir : 'tm_kit/basic/transaction')