tm_basic_transaction_headers = [
      'SingleKeyTransactionInterface.hpp'
      , 'VersionProviderComponent.hpp'
      , 'InMemoryVersionProviderComponent.hpp'
      , 'FileBackedSingleVersionProviderComponent.hpp'
      , 'SingleKeyLocalTransactionHandlerComponent.hpp'
      , 'SingleKeyLocalStorageTransactionBroker.hpp'
      , 'TITransactionFacilityOutputToData.hpp'
      , 'SingleKeyAsyncWatchableTransactionHandlerComponent.hpp'
      , 'SingleKeyAsyncWatchableStorageTransactionBroker.hpp'
      , 'ExclusiveSingleKeyAsyncWatchableTransactionHandlerComponent.hpp'
      , 'ExclusiveSingleKeyAsyncWatchableStorageTransactionBroker.hpp'
  ]
  
install_headers(tm_basic_transaction_headers, subdir : 'tm_kit/basic/transaction')
subdir('v2')