tm_basic_transaction_v2_headers = [
      'TransactionInterface.hpp'
      , 'DataStreamInterface.hpp'
      , 'TransactionEnvComponent.hpp'
      , 'DataStreamEnvComponent.hpp'
      , 'TransactionFacility.hpp'
      , 'GeneralSubscriber.hpp'
  ]
  
install_headers(tm_basic_transaction_v2_headers, subdir : 'tm_kit/basic/transaction/v2')